2008-03-25  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (TEX): only unset it if it was nonempty and a
	directory.

2008-03-25  Akim Demaille  <akim@epita.fr>

	* doc/Makefile.am: Use util_srcdir (new var) where appropriate.
	(man_MANS): Also install texi2pdf.1 and pdftexi2dvi.1.
	(unset_envvars): New.
	Use it.
	* util/local.test: Check we don't use $().
	Simplify sed usage: don't use \| which is not portable enough.
	* util/Makefile.am: Re-enable tests, in maintainer mode.

2008-03-23  Benno Schulenberg  <bensberg@justemail.net>  (tiny change)

	* info/session.c (_scroll_backward): better cursor placement.

2008-03-23  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (TEX): unset if it refers to a directory; I think
	the University of Utah installation does this.

2008-03-22  Karl Berry  <karl@gnu.org>

	* info/session.c (info_move_to_xref): conditionalize "no xref"
	message on cursor_movement_scrolls_p.  Proposed by
	Benno, 22 Mar 2008 15:17:49.

2008-03-21  Karl Berry  <karl@gnu.org>

	* pretest 4.11.95.

	* info/Makefile.am (funs.h): use this as the dependency

2008-03-21  Karl Berry  <karl@gnu.org>

	* info/session.c (_scroll_forward): leave cursor on last line.
	(_scroll_backward): use info_beginning_of_node for consistency.
	Changes proposed by Benno Schulenberg, 21 Mar 2008 16:31:27.

2008-03-20  Karl Berry  <karl@gnu.org>

	* info/info.c (main): avoid declaration after statement.

2008-03-17  Karl Berry  <karl@gnu.org>

	* texinfo.tex (\xrefX): avoid TeX expansions of _ etc.
	in the info filename argument (#4).
	Report from Ralf Wildenhues, 15 Mar 2008 11:23:38.

2008-03-14  Karl Berry  <karl@gnu.org>

	* pretest 4.11.94.

	* install-info/install-info.c: portability fixes.
	(parse_dir_file): declare void, since it is.
	(split_entry): Remove unused variable ostream.
	(add_missing_basenames, add_missing_descriptions): Avoid
		declarations after statements.
	(main): Do not use // comments.
	(format_entry): avoid using isblank, linking fails on osf-alpha,
	others.